# simple-rss

./: Cargo.toml  README.md
simple_rss_lib/: Cargo.toml
simple_rss_lib/src/: app.rs  data.rs  event.rs  html_render.rs  lib.rs
simple_rss_lib/src/components/: content.rs  help.rs  item_list.rs  mod.rs  toast.rs
src/: app.rs  data.rs  event.rs  html_render.rs  main.rs  path.rs  state.rs
src/components/: content.rs  item_list.rs  mod.rs  toast.rs
src/data/: loader.rs  mod.rs  path.rs
src/widget/: content.rs  item_list.rs  mod.rs
