[package]
name = "simple-rss"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }
anyhow = "1.0"
ratatui = "0.29"
textwrap = "0.16"
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
feed-rs = "2.3"
chrono = { version = "0.4", features = ["serde"] }
webbrowser = "1.0"
ego-tree = "0.10"
scraper = "0.23"
unicode-width = "0.2"
