[package]
name = "simple_rss_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
scraper = "0.23"
ego-tree = "0.10"
unicode-width = "0.2"
webbrowser = "1.0"
textwrap = "0.16"
